[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/reward_screen.gd" id="1"]

[node name="RewardScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.06, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "VICTORY"
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
horizontal_alignment = 1

[node name="GoldRewardLabel" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "+25 Gold"
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
horizontal_alignment = 1

[node name="ChooseLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Choose a card to add to your deck:"
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="CharacterTabs" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
theme_override_constants/separation = 10

[node name="CardContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 200)
alignment = 1
theme_override_constants/separation = 15

[node name="SkipButton" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(180, 45)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 18
text = "Skip"
